Add new plan form

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,8 +3,8 @@
         width: auto;
         height: auto;
         color: white;
-        background-color: #fb6500;
-        text-align: center;
+        background-color: gray;
+       
     }
     
 }
