--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,20 +1,20 @@
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
     }
-  
-    .Login form {
-      margin: 0 auto;
-      max-width: 320px;
+    .Login > button {
+        width: 200px;
     }
-    .signupLink{
-        margin: 10px;
-    }
-    .singupLink> button:hover{
-        background-color:#423d30;
-    }
-    .signupLink > button{
-        background-color: #fec741;
+    .Login > button > span {
+        text-align: center;
+        margin: auto;
+        font-weight: 700 !important;
+        font-size: 18px;
+        color: #4285f4;
     }
 }
   
