--- a/src/components/fav_list/fav_list.css
+++ b/src/components/fav_list/fav_list.css
@@ -1,35 +1,20 @@
 @media all and (min-width: 480px) {
-    .app-background {
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 50vh;
+    .fav-div {
+        padding: 60px 0;
+    } 
+    
+    .favTable {
+        padding: 60px 0;
     }
 
-    .main-container {
-        background-color: lightyellow;
-        width: 500px;
-        height: min-content;
-        border-radius: 5px;
-        padding: 20px;
-        box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
+    .center {
+        margin: auto;
+        width: 50%;
+        padding: 10px;
     }
-
-    .item-list {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .item-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 20px 0 20px 0;
-        border-bottom: 1px #fbc1bb solid;
-    }
-
-    .item-name {
-        cursor: pointer;
+    .inputSize {
+        width: 100%;
+        height: 100%;
+        margin: auto;
     }
 }
