--- a/src/components/Shopping/Shopping.css
+++ b/src/components/Shopping/Shopping.css
@@ -1,139 +1,159 @@
-
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    color: lightcoral;
-  }
-  
-  .App {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  
-  .app-background {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 50vh;
-  }
-  
-  .main-container {
-    background-color: lightyellow;
-    width: 500px;
-    height: min-content;
-    border-radius: 5px;
-    padding: 20px;
-    box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
-  }
-  
-  .title {
-    text-align: center;
-  }
-  
-  .add-item-box {
-    background: #fbc1bb;
-    color: lightsalmon;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    display: flex;
-    align-items: center;
-    border-radius: 10px;
-    padding: 5px;
-  }
-  
-  .add-item-box svg {
-    margin: 5px;
-  }
-  
-  .add-item-input {
-    box-sizing: border-box;
-    border: none;
-    background: transparent;
-    color: lightcoral;
-    width: 100%;
-    height: 30px;
-  }
-  
-  input::placeholder {
-    color: #ec645b;
-  }
-  input:focus {
-    outline: 0;
-  }
-  
-  .item-list {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .item-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0 20px 0;
-    border-bottom: 1px #fbc1bb solid;
-  }
-  
-  .item-name {
-    cursor: pointer;
-  }
-  
-  .item-name svg {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  
-  .item-action-buttons {
-    /* width: 30%; */
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .remove-button {
-    color: white;
-    background-color: red;
-  }
-  
-  .total {
-    float: right;
-    padding: 10px;
-  }
-  
-  .quantity {
-    display: flex;
-    align-items: center;
-    border: 1px solid #ec645b;
-    background: white;
-    border-radius: 50px;
-    font-size: 12px;
-    color: #ec645b;
-    min-width: 70px;
-    justify-content: space-between;
-  }
-  
-  button {
-    background: transparent;
-    border: none;
-    margin: 3px;
-    color: #ec645b;
-  }
-  button:focus {
-    outline: 0;
-  }
-  
-  button:hover {
-    cursor: pointer;
-  }
-  
-  .completed {
-    text-decoration: line-through;
-  }
-
-  .shop{
+@media all and (min-width: 480px) {  
+    .list-div {
+        padding: 60px 0;
+    } 
     
-    float: left;
-    left: 0px;
-    padding: 0px;
-  }
+    .listTable {
+        padding: 60px 0;
+    }
+
+    .center {
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    }
+    .inputSize {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        color: lightcoral;
+    }
+    
+    .App {
+        font-family: sans-serif;
+        text-align: center;
+    }
+    
+    .app-background {
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 50vh;
+    }
+    
+    .main-container {
+        background-color: lightyellow;
+        width: 500px;
+        height: min-content;
+        border-radius: 5px;
+        padding: 20px;
+        box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
+    }
+    
+    .title {
+        text-align: center;
+    }
+    
+    .add-item-box {
+        background: #fbc1bb;
+        color: lightsalmon;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+        padding: 5px;
+    }
+    
+    .add-item-box svg {
+        margin: 5px;
+    }
+    
+    .add-item-input {
+        box-sizing: border-box;
+        border: none;
+        background: transparent;
+        color: lightcoral;
+        width: 100%;
+        height: 30px;
+    }
+    
+    input::placeholder {
+        color: #ec645b;
+    }
+    input:focus {
+        outline: 0;
+    }
+    
+    .item-list {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .item-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px 0 20px 0;
+        border-bottom: 1px #fbc1bb solid;
+    }
+    
+    .item-name {
+        cursor: pointer;
+    }
+    
+    .item-name svg {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    
+    .item-action-buttons {
+        /* width: 30%; */
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .remove-button {
+        color: white;
+        background-color: red;
+    }
+    
+    .total {
+        float: right;
+        padding: 10px;
+    }
+    
+    .quantity {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ec645b;
+        background: white;
+        border-radius: 50px;
+        font-size: 12px;
+        color: #ec645b;
+        min-width: 70px;
+        justify-content: space-between;
+    }
+    
+    button {
+        background: transparent;
+        border: none;
+        margin: 3px;
+        color: #ec645b;
+    }
+    button:focus {
+        outline: 0;
+    }
+    
+    button:hover {
+        cursor: pointer;
+    }
+    
+    .completed {
+        text-decoration: line-through;
+    }
+
+    .shop{
+        
+        float: left;
+        left: 0px;
+        padding: 0px;
+    }
+}
